# vyne

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/microlog/: microlog.h
ext/: setup.py
ext/source/: vyne.cpp
include/: io.hpp  util.hpp
include/cuda/: brdf.cuh  interop.cuh  mat4.cuh  util.cuh  vector_math.cuh
include/cuda/optix/: acceleration.cuh  util.cuh
include/ssdfg/: contexts.cuh  kernels.cuh
notebooks/: mesh.ipynb  sphere.ipynb
shaders/optix/: ssdfg.cu  ssdfg.cuh
source/: io.cpp  main.cu
source/cuda/: interop.cu
source/ext/: vyne.cu
source/ssdfg/: contexts.cu  kernels.cu
